--- a/code/app/src/main/res/layout/entrant_tab.xml
+++ b/code/app/src/main/res/layout/entrant_tab.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="100dp"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#E8E8E8"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingTop="16dp"
     android:paddingBottom="16dp"
-    android:background="#E8E8E8"
     tools:context=".MainActivity">
 
-    <!-- Profile Item -->
     <ImageView
         android:id="@+id/settings_icon"
         android:layout_width="wrap_content"
@@ -19,19 +18,21 @@
         android:layout_marginBottom="24dp"
         app:srcCompat="@drawable/settings_icon" />
 
+    <!-- Profile Item -->
     <androidx.cardview.widget.CardView
         android:layout_width="56dp"
         android:layout_height="56dp"
-        app:cardCornerRadius="16dp"
-        app:cardBackgroundColor="#676767"
         android:layout_marginBottom="24dp"
+        app:cardBackgroundColor="#676767"
+        app:cardCornerRadius="16dp"
         app:cardElevation="0dp">
+
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/person_icon"
             android:layout_gravity="center"
-            app:tint="@android:color/white"/>
+            android:src="@drawable/person_icon"
+            app:tint="@android:color/white" />
     </androidx.cardview.widget.CardView>
 
 
@@ -39,17 +40,17 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginBottom="24dp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="24dp">
+        android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="64dp"
             android:layout_height="32dp"
-            app:cardCornerRadius="16dp"
+            android:layout_marginBottom="4dp"
             app:cardBackgroundColor="#BDBDBD"
-            app:cardElevation="0dp"
-            android:layout_marginBottom="4dp">
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp">
 
             <ImageView
                 android:layout_width="20dp"
@@ -64,36 +65,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="My events"
-            android:textSize="12sp"
-            android:textColor="#494949"/>
+            android:textColor="#494949"
+            android:textSize="12sp" />
     </LinearLayout>
 
-    <!-- Create Events Item -->
+    <!-- Search for events Item -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginBottom="24dp"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="24dp">
+        android:orientation="vertical">
 
         <ImageView
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/calender_icon"
-            android:layout_marginBottom="4dp"/>
+            android:layout_marginBottom="4dp"
+            android:src="@drawable/search_icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create events"
-            android:textSize="12sp"
-            android:textColor="#494949"/>
+            android:gravity="center"
+            android:text="Search for\nevents"
+            android:textColor="#494949"
+            android:textSize="12sp" />
     </LinearLayout>
 
-    <!-- Notifications Center Item -->
+    <!-- Notifications Item -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -107,7 +110,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Notifications\nCenter"
+            android:text="Notifications"
+            android:textColor="#494949"
+            android:textSize="12sp" />
+    </LinearLayout>
+
+    <!-- QR Reader Item -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginBottom="4dp"
+            android:src="@drawable/qr_reader_icon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="QR Reader"
             android:textColor="#494949"
             android:textSize="12sp" />
     </LinearLayout>
