--- a/code/app/src/main/res/values/colors.xml
+++ b/code/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="theme">#DFCFFB</color>
+    <color name="background_grey">#E8E8E8</color>
+    <color name="light_purple">#8152E5</color>
+    <color name="text_color">#1B1A1A</color>
 </resources>
