--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context=".MainActivity">
+    tools:context=".OrganizerDashboardActivity"
+    android:id="@+id/main"  >
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
