--- a/code/app/src/main/res/layout/event_creation.xml
+++ b/code/app/src/main/res/layout/event_creation.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/createBackButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_arrow_left" />
@@ -79,12 +79,15 @@
                     android:textSize="14sp" />
 
                 <EditText
+                    android:id="@+id/nameEditText"
                     android:layout_width="300dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edit_text_background_dark"
-                    android:inputType="text|textNoSuggestions" />
+                    android:inputType="text|textNoSuggestions"
+                    android:paddingStart="8dp"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/textView5"
@@ -95,13 +98,18 @@
                     android:textSize="14sp" />
 
                 <EditText
+                    android:id="@+id/descrEditText"
+                    android:gravity="top|start"
+                    android:scrollbars="vertical"
+                    android:lines="3"
                     android:layout_width="300dp"
-                    android:layout_height="81dp"
+                    android:layout_height="100dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edit_text_background_dark"
-                    android:inputType="text|textNoSuggestions"
-                    android:padding="16dp" />
+                    android:inputType="text|textMultiLine"
+                    android:padding="16dp"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -112,16 +120,18 @@
                     android:textSize="14sp" />
 
                 <EditText
-                    android:id="@+id/editText7"
+                    android:id="@+id/locEditText"
                     android:layout_width="300dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edit_text_background_dark"
-                    android:inputType="text|textNoSuggestions" />
+                    android:inputType="text|textNoSuggestions"
+                    android:paddingStart="8dp"
+                    android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingStart="18dp"
@@ -129,13 +139,35 @@
                     android:textSize="14sp" />
 
                 <EditText
-                    android:id="@+id/editText8"
+                    android:id="@+id/dateEditText"
+                    android:layout_width="300dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/edit_text_background_dark"
+                    android:inputType="text|textNoSuggestions"
+                    android:paddingStart="8dp"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="18dp"
+                    android:text="Event Time"
+                    android:textSize="14sp" />
+
+                <EditText
+                    android:id="@+id/timeEditText"
                     android:layout_width="300dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/edit_text_background_dark"
-                    android:inputType="text|textNoSuggestions" />
+                    android:inputType="text|textNoSuggestions"
+                    android:paddingStart="8dp"
+                    android:textSize="12sp" />
+
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -147,7 +179,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:paddingTop="10dp"
+            android:paddingTop="20dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="24dp"
             app:cardElevation="8dp"
@@ -183,30 +215,34 @@
                     android:textSize="14sp" />
 
                 <EditText
-                    android:id="@+id/editText6"
+                    android:id="@+id/startDateEditText"
                     android:layout_width="300dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/edit_text_background_dark"
-                    android:inputType="text|textNoSuggestions" />
+                    android:inputType="text|textNoSuggestions"
+                    android:paddingStart="8dp"
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingStart="18dp"
-                    android:text="Description"
+                    android:text="Registration End Date"
                     android:textSize="14sp" />
 
                 <EditText
-                    android:id="@+id/editText5"
+                    android:id="@+id/endDateEditText"
                     android:layout_width="300dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="16dp"
                     android:background="@drawable/edit_text_background_dark"
-                    android:inputType="text|textNoSuggestions" />
+                    android:inputType="text|textNoSuggestions"
+                    android:paddingStart="8dp"
+                    android:textSize="12sp" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -220,7 +256,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/settingsButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="6dp"
