Created the Notifications UI. The manage Event UI. And also the reusable card view for the events

--- a/code/app/src/main/res/layout/organizer_dashboard_empty.xml
+++ b/code/app/src/main/res/layout/organizer_dashboard_empty.xml
@@ -85,6 +85,7 @@
             app:cardElevation="0dp">
 
             <LinearLayout
+                android:id="@+id/event_card_section"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
