Changed to recycler view in Notifications center and entrant_dashboard.xml for easier implementation of the custom event cards.

--- a/code/app/src/main/res/layout/entrant_event_card.xml
+++ b/code/app/src/main/res/layout/entrant_event_card.xml
@@ -29,7 +29,7 @@
             android:background="#B3FFFFFF"
             android:gravity="center"
             android:padding="8dp"
-            android:text="Kids' Pottery Classes"
+            android:text="Event Name"
             android:textColor="@android:color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
