--- a/code/app/src/main/res/layout/entrant_dashboard.xml
+++ b/code/app/src/main/res/layout/entrant_dashboard.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@android:color/white"
+    tools:context=".OrganizerDashboardActivity"
+    android:id="@+id/main"  >
+
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
@@ -12,8 +17,8 @@
         app:layout_constraintGuide_begin="100dp" />
 
     <include
-        android:id="@+id/organizer_tab"
-        layout="@layout/organizer_tab"
+        android:id="@+id/entrant_tab"
+        layout="@layout/entrant_tab"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,28 +31,41 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/page_selector"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toEndOf="@id/entrant_tab"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notifications Center"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"
-            android:text="Click on desired Active Event\nto compose notification"
-            android:textAlignment="center" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/activeEvents"
+                android:layout_width="0dp"
+                android:layout_height="38dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/light_purple"
+                android:text="Current"
+                android:textColor="@color/text_color"
+                android:padding="0dp"
+                />
+
+            <Button
+                android:id="@+id/pastEvents"
+                android:layout_width="0dp"
+                android:layout_height="38dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/background_grey"
+                android:text="Past"
+                android:textColor="@color/text_color"
+                android:padding="0dp"/>
+
+
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -62,18 +80,18 @@
                 android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/notification_events_recycler_view"
+                    android:id="@+id/events_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="8dp"
                     android:clipToPadding="false"
                     android:visibility="gone"
                     tools:listitem="@layout/entrant_event_card"
-                    tools:itemCount="5"
+                    tools:itemCount="3"
                     tools:visibility="visible" />
 
                 <LinearLayout
-                    android:id="@+id/empty_view_notification"
+                    android:id="@+id/empty_view_entrant"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -83,22 +101,35 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="No Active Events\n to send notifications for."
+                        android:layout_marginBottom="24dp"
+                        android:text="No Active Events to
+display right now. 
+Join Now!"
                         android:textAlignment="center"
                         android:textColor="#494949"
                         android:textSize="16sp" />
+
+                    <Button
+                        android:id="@+id/join_event_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Search for Events"
+                        app:backgroundTint="@color/light_purple"
+                        app:cornerRadius="16dp" />
                 </LinearLayout>
             </FrameLayout>
+
         </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/notificationHistory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:drawableLeft="@drawable/history"
-            android:text="Notification History" />
-
     </LinearLayout>
+
+    <include
+        android:id="@+id/page_selector"
+        layout="@layout/page_selector"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/entrant_tab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
