--- a/code/app/src/main/res/layout/event_creation.xml
+++ b/code/app/src/main/res/layout/event_creation.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".EventCreationActivity">
+    tools:context=".CreateEventActivity"
+    android:id="@+id/main">
 
     <LinearLayout
         android:layout_width="match_parent"
