clean up entrant entrant_dashboard

--- a/code/app/src/main/res/layout/entrant_dashboard.xml
+++ b/code/app/src/main/res/layout/entrant_dashboard.xml
@@ -227,7 +227,8 @@
                     android:id="@+id/events_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
 
                     <!-- Events will be dynamically added here from code -->
 
