--- a/code/app/src/main/res/layout/event_card_item.xml
+++ b/code/app/src/main/res/layout/event_card_item.xml
@@ -2,8 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="175dp"
     android:layout_marginBottom="12dp"
+    android:layout_marginHorizontal="10dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="2dp">
 
@@ -16,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/event_placeholder" />
+            android:src="@drawable/ic_launcher_background" />
 
         <View
             android:layout_width="match_parent"
