--- a/code/app/src/main/res/layout/event_creation.xml
+++ b/code/app/src/main/res/layout/event_creation.xml
@@ -123,6 +123,21 @@
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/clock"
                     android:drawablePadding="8dp"/>
+
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Number of Participants" />
+
+                <EditText
+                    android:id="@+id/slotsEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/group"
+                    android:drawablePadding="8dp"
+                    android:inputType="number"
+                    android:paddingBottom="5dp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
