--- a/code/app/src/main/res/layout/activity_sign_in.xml
+++ b/code/app/src/main/res/layout/activity_sign_in.xml
@@ -27,6 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:hint="Email or Phone"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         android:background="@drawable/edit_text_background"
         android:padding="16dp"
@@ -37,6 +39,8 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:hint="Password"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:inputType="textPassword"
         android:background="@drawable/edit_text_background"
         android:padding="16dp"
@@ -70,7 +74,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="New to Sigmas?" />
+            android:text="New to Sigmas? "
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/joinNow"
@@ -78,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Join Now"
-            android:textColor="#2196F3" />
+            android:textColor="#1569BF" />
     </LinearLayout>
 
     <LinearLayout
@@ -98,6 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OR"
+            android:textColor="@color/black"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
 
