tab create event button now functional

--- a/code/app/src/main/res/layout/organizer_tab.xml
+++ b/code/app/src/main/res/layout/organizer_tab.xml
@@ -71,6 +71,7 @@
 
     <!-- Create Events Item -->
     <LinearLayout
+        android:id="@+id/create_event_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
