--- a/code/app/src/main/res/layout/entrant_tab.xml
+++ b/code/app/src/main/res/layout/entrant_tab.xml
@@ -140,4 +140,33 @@
             android:textSize="12sp" />
     </LinearLayout>
 
+    <!-- Spacer -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <!-- Logout -->
+    <LinearLayout
+        android:id="@+id/logout_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginBottom="4dp"
+            android:src="@drawable/logout_icon" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Logout"
+            android:textColor="#494949"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 </LinearLayout>
