Created more Notfication UI elements. Added the activity classes for each.

--- a/code/app/src/main/res/layout/compose_notifications.xml
+++ b/code/app/src/main/res/layout/compose_notifications.xml
@@ -34,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:background="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,6 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Compose Notification"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginTop="16dp"/>
@@ -76,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Select Recipients"
+                android:textColor="@color/black"
                 android:layout_marginTop="16dp"
                 android:textStyle="bold"/>
 
@@ -88,7 +91,8 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:background="@color/white">
                     <RadioButton
                         android:id="@+id/radioWaitingList"
                         android:layout_width="wrap_content"
@@ -142,7 +146,8 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:background="@color/white">
                     <RadioButton
                         android:id="@+id/radioChosenEntrants"
                         android:layout_width="wrap_content"
@@ -155,7 +160,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="18dp"
-                        android:layout_toStartOf="@+id/chosenEntrantsCount"
+                        android:layout_toStartOf="@+id/chosenCount"
                         android:layout_toEndOf="@id/radioChosenEntrants"
                         android:orientation="vertical">
 
@@ -173,7 +178,7 @@
                     </LinearLayout>
 
                     <Button
-                        android:id="@+id/chosenEntrantsCount"
+                        android:id="@+id/chosenCount"
                         android:layout_width="54dp"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -195,7 +200,8 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:background="@color/white">
                     <RadioButton
                         android:id="@+id/radioCancelledEntrants"
                         android:layout_width="wrap_content"
@@ -208,14 +214,14 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="17dp"
-                        android:layout_toStartOf="@+id/cancelledEntrantsCount"
+                        android:layout_toStartOf="@+id/cancelledCount"
                         android:layout_toEndOf="@id/radioCancelledEntrants"
                         android:orientation="vertical">
 
                         <TextView
                             android:layout_width="134dp"
                             android:layout_height="wrap_content"
-                            android:text="Cancelled Entrants"
+                            android:text="Cancelled \nEntrants"
                             android:textColor="@android:color/black"
                             android:textStyle="bold" />
 
@@ -225,7 +231,7 @@
                             android:text="Declined or expired registrations" />
                     </LinearLayout>
                      <Button
-                        android:id="@+id/cancelledEntrantsCount"
+                        android:id="@+id/cancelledCount"
                          android:layout_width="54dp"
                          android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -242,10 +248,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Message"
+                android:textColor="@color/black"
                 android:layout_marginTop="16dp"
                 android:textStyle="bold"/>
 
             <EditText
+                android:id="@+id/messageEditText"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:hint="Enter your notification message..."
@@ -255,6 +263,7 @@
                 android:layout_marginTop="8dp"/>
 
             <TextView
+                android:id="@+id/characterCount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="0 characters"
