--- a/code/app/src/main/res/layout/entrant_tab.xml
+++ b/code/app/src/main/res/layout/entrant_tab.xml
@@ -94,6 +94,7 @@
 
     <!-- Notifications Item -->
     <LinearLayout
+        android:id="@+id/notifications_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
@@ -110,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Notifications"
+            android:text="Notifications \nHistory"
             android:textColor="#494949"
             android:textSize="12sp" />
     </LinearLayout>
