--- a/code/app/src/main/res/layout/notification_card.xml
+++ b/code/app/src/main/res/layout/notification_card.xml
@@ -11,7 +11,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/notificationTag"
@@ -72,6 +73,19 @@
             app:layout_constraintStart_toEndOf="@id/recipientIcon"
             app:layout_constraintTop_toTopOf="@id/recipientIcon"
             tools:text="3 recipients" />
+
+        <TextView
+            android:id="@+id/notificationEventName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="Event name"
+            android:textAlignment="textEnd"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/notificationRecipientsCount"
+            app:layout_constraintTop_toBottomOf="@+id/notificationMessage" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
