--- a/code/app/src/main/res/layout/notification_history.xml
+++ b/code/app/src/main/res/layout/notification_history.xml
@@ -43,11 +43,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/notificationsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <include layout="@layout/notification_card" />
+            android:orientation="vertical"
+            android:padding="8dp">
 
         </LinearLayout>
     </ScrollView>
