--- a/code/app/src/main/res/layout/organizer_tab.xml
+++ b/code/app/src/main/res/layout/organizer_tab.xml
@@ -93,6 +93,7 @@
 
     <!-- Notifications Center Item -->
     <LinearLayout
+        android:id="@+id/notifications_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
